Added get affiliate by id as well
